--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
         "babel-core": "^6.20.0",
         "babel-jest": "^23.6.0",
         "babel-loader": "^6.2.9",
-        "babel-preset-env": "^1.7.0",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-latest": "^6.16.0",
         "babel-preset-react": "^6.16.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.15.2",
+        "chalk-animation": "^1.6.0",
         "compression": "^1.7.0",
         "cookie-parser": "^1.4.3",
         "cookie-session": "^2.0.0-alpha.2",
