--- a/package.json
+++ b/package.json
@@ -47,14 +47,16 @@
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
-        "socket.io": "^2.0.3",
+        "socket.io": "^2.2.0",
         "spiced-pg": "^1.0.0",
         "uid-safe": "^2.1.4",
         "webpack": "^1.14.0",
         "webpack-dev-middleware": "^1.8.4"
     },
     "jest": {
-        "setupFiles": [ "./jest.js" ]
+        "setupFiles": [
+            "./jest.js"
+        ]
     },
     "keywords": [],
     "author": "",
